--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
+*{
+  padding: 0;
+  margin: 0;
+  
+}
 .App {
-  text-align: center;
+  background-color: black;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.App--navbar {
+    background-color: rgb(24, 24, 24);
+    padding: 0 60px;
+    height: 60px;
+    
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .App--navbar ul {
+    display: flex;
+    justify-content: flex-end;
+    line-height: 60px;
+    list-style: none;
+    gap: 15px;
+    font-weight: bold;
+    font-size: 1.1rem;
   }
-  to {
-    transform: rotate(360deg);
+  
+  .App--navbar ul li {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
   }
-}
+  
+  .App--navbar a {
+    text-decoration: none;
+    color: white;
+  }
